# whishper-matrix-bot

./: .env  .gitignore  README.md  pyproject.toml
src/whishper_matrix_bot/: __init__.py  __main__.py
