[project]
name = "whishper-matrix-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "YtGz", email = "10178241+YtGz@users.noreply.github.com" }
]
dependencies = [
    "simplematrixbotlib>=2.12.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"whishper-matrix-bot" = "whishper_matrix_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/whishper_matrix_bot"]
